fixed content divs from spilling out of container

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -17,9 +17,20 @@ body {
     display: grid;
     grid-gap: 3px;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: auto 80vh auto auto;
+    grid-template-rows: auto;
     background-color: pink;
     overflow: auto;
+    background: url('../assets/bg.jpg') no-repeat fixed;
+	background-size: cover;
+	height: 100vh;
+}
+
+.vertical-align {
+	margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* Main Nav and Header Styles */
@@ -57,14 +68,20 @@ header {
 	display: inline-block;
 }
 
+/*Hero styles */
+
 #hero {
     grid-column: 1 / -1;
-    background-color: blue;
+    background-size: cover;
+	background-attachment: fixed;
+  	height: 90vh;
+  	text-align: center;
 }
 
 #content {
     grid-column: 1 / -1;
     background-color: purple;
+    z-index: 100;
 }
 
 footer {
